# vox

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  requirements-specification.md  start.bat  start.sh  stop.bat
.github/workflows/: ci.yml
benchmarks/: manifest.json  reading_script.md  record_benchmark.py  run_benchmark.py
docs/: handoff.md
src/vox/: __init__.py  __main__.py  app.py  config.py  hotkey.py  inserter.py  llm.py  media.py  pipeline.py  recorder.py  tray.py
src/vox/stt/: __init__.py  base.py  factory.py  faster_whisper_engine.py
tests/: test_app.py  test_config.py  test_hallucination.py  test_hotkey.py  test_inserter.py  test_llm.py  test_main.py  test_media.py  test_pipeline.py  test_pipeline_improvements.py  test_recorder.py  test_stt.py  test_tray.py
